--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'New Order';
+  src: url('../public/fonts/NewOrder/NewOrder-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'New Order';
+  src: url('../public/fonts/NewOrder/NewOrder-Light.woff2') format('woff2'),
+    url('../public/fonts/NewOrder/NewOrder-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'New Order';
+  src: url('../public/fonts/NewOrder/NewOrder-Medium.woff2') format('woff2'),
+    url('../public/fonts/NewOrder/NewOrder-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'New Order';
+  src: url('../public/fonts/NewOrder/NewOrder-Regular.woff2') format('woff2'),
+    url('../public/fonts/NewOrder/NewOrder-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'New Order';
+  src: url('../public/fonts/NewOrder/NewOrder-SemiBold.woff2') format('woff2'),
+    url('../public/fonts/NewOrder/NewOrder-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'New Order', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
