--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0E0E0E;
+  background-color: #0A0A0A;
 }
 
 code {
